docs/assets/stylesheets/landing.css
/* ... */
.home-typeset abbr {
    text-decoration: none;
    border-bottom: .05rem dotted var(--home-default-fg-color--light);
    cursor: help
}

.home-typeset small {
    opacity: .75
}

.home-typeset sup, .home-typeset sub {
    margin-left: .078125em
}

[dir=rtl] .home-typeset sup, [dir=rtl] .home-typeset sub {
    margin-right: .078125em;
    margin-left: initial
}

.home-typeset blockquote {
    padding-left: .6rem;
    color: var(--home-default-fg-color--light);
    border-left: .2rem solid var(--home-default-fg-color--lighter)
}

[dir=rtl] .home-typeset blockquote {
    padding-right: .6rem;
    padding-left: initial;
    border-right: .2rem solid var(--home-default-fg-color--lighter);
    border-left: initial
}

.home-typeset ul {
    list-style-type: disc
}

.home-typeset ul, .home-typeset ol {
    margin-left: .625em;
    padding: 0
}

[dir=rtl] .home-typeset ul, [dir=rtl] .home-typeset ol {
    margin-right: .625em;
    margin-left: initial
}

.home-typeset ul ol, .home-typeset ol ol {
    list-style-type: lower-alpha
}

.home-typeset ul ol ol, .home-typeset ol ol ol {
    list-style-type: lower-roman
}

.home-typeset ul li, .home-typeset ol li {
    margin-bottom: .5em;
    margin-left: 1.25em
}

[dir=rtl] .home-typeset ul li, [dir=rtl] .home-typeset ol li {
    margin-right: 1.25em;
    margin-left: initial
}

.home-typeset ul li p, .home-typeset ul li blockquote, .home-typeset ol li p, .home-typeset ol li blockquote {
    margin: .5em 0
}

.home-typeset ul li:last-child, .home-typeset ol li:last-child {
    margin-bottom: 0
}

.home-typeset ul li ul, .home-typeset ul li ol, .home-typeset ol li ul, .home-typeset ol li ol {
    margin: .5em 0 .5em .625em
}

[dir=rtl] .home-typeset ul li ul, [dir=rtl] .home-typeset ul li ol, [dir=rtl] .home-typeset ol li ul, [dir=rtl] .home-typeset ol li ol {
    margin-right: .625em;
    margin-left: initial
}

.home-typeset dd {
    margin: 1em 0 1em 1.875em
}

[dir=rtl] .home-typeset dd {
    margin-right: 1.875em;
    margin-left: initial
}

.home-typeset iframe, .home-typeset img, .home-typeset svg {
    max-width: 100%
}

.home-typeset table:not([class]) {
    display: inline-block;
    max-width: 100%;
    overflow: auto;
    font-size: .64rem;
    background: var(--home-default-bg-color);
    border-radius: .1rem;
    box-shadow: 0 .2rem .5rem rgba(0, 0, 0, .05), 0 0 .05rem rgba(0, 0, 0, .1);
    touch-action: auto
}

.home-typeset table:not([class])+* {
    margin-top: 1.5em
}

.home-typeset table:not([class]) th:not([align]), .home-typeset table:not([class]) td:not([align]) {
    text-align: left
}

[dir=rtl] .home-typeset table:not([class]) th:not([align]), [dir=rtl] .home-typeset table:not([class]) td:not([align]) {
    text-align: right
}

.home-typeset table:not([class]) th {
    min-width: 5rem;
    padding: .6rem .8rem;
    color: var(--home-default-bg-color);
    vertical-align: top;
    background-color: var(--home-default-fg-color--light)
}

.home-typeset table:not([class]) td {
    padding: .6rem .8rem;
    vertical-align: top;
    border-top: .05rem solid var(--home-default-fg-color--lightest)
}

.home-typeset table:not([class]) tr {
    transition: background-color 125ms
}

.home-typeset table:not([class]) tr:hover {
    background-color: rgba(0, 0, 0, .035);
    box-shadow: 0 .05rem 0 var(--home-default-bg-color) inset
}

.home-typeset table:not([class]) tr:first-child td {
    border-top: 0
}

.home-typeset table:not([class]) a {
    word-break: normal
}

.home-typeset__scrollwrap {
    margin: 1em -0.8rem;
    overflow-x: auto;
    touch-action: auto
}

.home-typeset__table {
    display: inline-block;
    margin-bottom: .5em;
    padding: 0 .8rem
}

.home-typeset__table table {
    display: table;
    width: 100%;
    margin: 0;
    overflow: hidden
}

html {
    height: 100%;
    overflow-x: hidden;
    font-size: 125%;
    background-color: var(--home-default-bg-color)
}

body {
    position: relative;
    display: flex;
    /*flex-direction: column;*/
    align-items:center;
    width: 100%;
    min-height: 100%;
    font-size: .5rem
}

hr {
    display: block;
    height: .05rem;
    padding: 0;
    border: 0
}

.home-grid {
    max-width: 61rem;
    margin-right: auto;
    margin-left: auto
}

.home-center {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 10%;
}

.home-container {
    display: flex;
    flex-direction: column;
    flex-grow: 1
}

.home-main {
    flex-grow: 1
}

.home-main__inner {
    height: 100%;
    margin-top: 1.5rem
}

.home-ellipsis {
    display: block;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis
}

.home-toggle {
    display: none
}

.home-overlay {
    position: fixed;
    top: 0;
    z-index: 3;
    width: 0;
    height: 0;
    background-color: var(--home-default-fg-color--light);
    opacity: 0;
    transition: width 0ms 250ms, height 0ms 250ms, opacity 250ms
}

.home-skip {
    position: fixed;
    z-index: -1;
    margin: .5rem;
    padding: .3rem .5rem;
    color: var(--home-default-bg-color);
    font-size: .64rem;
    background-color: var(--home-default-fg-color);
    border-radius: .1rem;
    transform: translateY(0.4rem);
    opacity: 0
}

.home-skip:focus {
    z-index: 10;
    transform: translateY(0);
    opacity: 1;
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 175ms 75ms
}

@page {
    margin: 25mm
}

.home-announce {
    overflow: auto;
    background-color: var(--home-default-fg-color)
}

.home-announce__inner {
    margin: .6rem auto;
    padding: 0 .8rem;
    color: var(--home-default-bg-color);
    font-size: .7rem
}

.home-typeset .home-button {
    display: inline-block;
    padding: .625em 2em;
    color: var(--home-primary-fg-color);
    font-weight: 700;
    border: .1rem solid currentColor;
    border-radius: .1rem;
    transition: color 125ms, background-color 125ms, border-color 125ms
}
/* ... */

